--- a/local/data/ui/views/crypto_mining_gpudeepdive.xml
+++ b/local/data/ui/views/crypto_mining_gpudeepdive.xml
@@ -14,16 +14,18 @@
       <chart>
         <title>GPU0</title>
         <search>
-          <query>host=rig1 source="*Claymore*" | timechart span=5m avg(rigGPU0m) as GPU0-mhs, avg(rigGPU0f) as GPU0-fan%, avg(rigGPU0t) as GPU0-temp</query>
+          <query>host=rig01 source="*Claymore*" | timechart span=5m avg(rigGPU0m) as GPU0-mhs, avg(rigGPU0f) as GPU0-fan%, avg(rigGPU0t) as GPU0-temp</query>
           <earliest>-60m@m</earliest>
           <latest>now</latest>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisLabelsY.majorUnit">25</option>
         <option name="charting.axisTitleX.visibility">visible</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.maximumNumber">85</option>
         <option name="charting.axisY.scale">linear</option>
         <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">inherit</option>
@@ -41,24 +43,25 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
-        <option name="charting.axisY.maximumNumber">85</option>
-        <option name="charting.axisLabelsY.majorUnit">25</option>
+        <option name="refresh.display">progressbar</option>
       </chart>
     </panel>
     <panel>
       <chart>
         <title>GPU1</title>
         <search>
-          <query>host=rig1 source="*Claymore*" | timechart span=5m avg(rigGPU1m) as GPU1-mhs, avg(rigGPU1f) as GPU1-fan%, avg(rigGPU1t) as GPU1-temp</query>
+          <query>host=rig01 source="*Claymore*" | timechart span=5m avg(rigGPU1m) as GPU1-mhs, avg(rigGPU1f) as GPU1-fan%, avg(rigGPU1t) as GPU1-temp</query>
           <earliest>-60m@m</earliest>
           <latest>now</latest>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisLabelsY.majorUnit">25</option>
         <option name="charting.axisTitleX.visibility">visible</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.maximumNumber">85</option>
         <option name="charting.axisY.scale">linear</option>
         <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">inherit</option>
@@ -76,24 +79,25 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
-        <option name="charting.axisY.maximumNumber">85</option>
-        <option name="charting.axisLabelsY.majorUnit">25</option>
+        <option name="refresh.display">progressbar</option>
       </chart>
     </panel>
     <panel>
       <chart>
         <title>GPU2</title>
         <search>
-          <query>host=rig1 source="*Claymore*" | timechart span=5m avg(rigGPU2m) as GPU2-mhs, avg(rigGPU2f) as GPU2-fan%, avg(rigGPU2t) as GPU2-temp</query>
+          <query>host=rig01 source="*Claymore*" | timechart span=5m avg(rigGPU2m) as GPU2-mhs, avg(rigGPU2f) as GPU2-fan%, avg(rigGPU2t) as GPU2-temp</query>
           <earliest>-60m@m</earliest>
           <latest>now</latest>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisLabelsY.majorUnit">25</option>
         <option name="charting.axisTitleX.visibility">visible</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.maximumNumber">85</option>
         <option name="charting.axisY.scale">linear</option>
         <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">inherit</option>
@@ -111,24 +115,25 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
-        <option name="charting.axisLabelsY.majorUnit">25</option>
-        <option name="charting.axisY.maximumNumber">85</option>
+        <option name="refresh.display">progressbar</option>
       </chart>
     </panel>
     <panel>
       <chart>
         <title>GPU3</title>
         <search>
-          <query>host=rig1 source="*Claymore*" | timechart span=5m avg(rigGPU3m) as GPU3-mhs, avg(rigGPU3f) as GPU3-fan%, avg(rigGPU3t) as GPU3-temp</query>
+          <query>host=rig01 source="*Claymore*" | timechart span=5m avg(rigGPU3m) as GPU3-mhs, avg(rigGPU3f) as GPU3-fan%, avg(rigGPU3t) as GPU3-temp</query>
           <earliest>-60m@m</earliest>
           <latest>now</latest>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisLabelsY.majorUnit">25</option>
         <option name="charting.axisTitleX.visibility">visible</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.maximumNumber">75</option>
         <option name="charting.axisY.scale">linear</option>
         <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">inherit</option>
@@ -146,8 +151,7 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
-        <option name="charting.axisLabelsY.majorUnit">25</option>
-        <option name="charting.axisY.maximumNumber">75</option>
+        <option name="refresh.display">progressbar</option>
       </chart>
     </panel>
   </row>
@@ -156,16 +160,18 @@
       <chart>
         <title>GPU4</title>
         <search>
-          <query>host=rig1 source="*Claymore*" | timechart span=5m avg(rigGPU4m) as GPU4-mhs, avg(rigGPU4f) as GPU4-fan%, avg(rigGPU4t) as GPU4-temp</query>
+          <query>host=rig01 source="*Claymore*" | timechart span=5m avg(rigGPU4m) as GPU4-mhs, avg(rigGPU4f) as GPU4-fan%, avg(rigGPU4t) as GPU4-temp</query>
           <earliest>-60m@m</earliest>
           <latest>now</latest>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisLabelsY.majorUnit">25</option>
         <option name="charting.axisTitleX.visibility">visible</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.maximumNumber">75</option>
         <option name="charting.axisY.scale">linear</option>
         <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">inherit</option>
@@ -183,24 +189,25 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
-        <option name="charting.axisLabelsY.majorUnit">25</option>
-        <option name="charting.axisY.maximumNumber">75</option>
+        <option name="refresh.display">progressbar</option>
       </chart>
     </panel>
     <panel>
       <chart>
         <title>GPU5</title>
         <search>
-          <query>host=rig1 source="*Claymore*" | timechart span=5m avg(rigGPU5m) as GPU5-mhs, avg(rigGPU5f) as GPU5-fan%, avg(rigGPU5t) as GPU5-temp</query>
+          <query>host=rig01 source="*Claymore*" | timechart span=5m avg(rigGPU5m) as GPU5-mhs, avg(rigGPU5f) as GPU5-fan%, avg(rigGPU5t) as GPU5-temp</query>
           <earliest>-60m@m</earliest>
           <latest>now</latest>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisLabelsY.majorUnit">25</option>
         <option name="charting.axisTitleX.visibility">visible</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.maximumNumber">75</option>
         <option name="charting.axisY.scale">linear</option>
         <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">inherit</option>
@@ -218,15 +225,14 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
-        <option name="charting.axisLabelsY.majorUnit">25</option>
-        <option name="charting.axisY.maximumNumber">75</option>
+        <option name="refresh.display">progressbar</option>
       </chart>
     </panel>
     <panel>
       <chart>
         <title>GPU6</title>
         <search>
-          <query>host=rig1 source="*Claymore*" | timechart span=5m avg(rigGPU6m) as GPU6-mhs, avg(rigGPU6f) as GPU6-fan%, avg(rigGPU6t) as GPU6-temp</query>
+          <query>host=rig01 source="*Claymore*" | timechart span=5m avg(rigGPU6m) as GPU6-mhs, avg(rigGPU6f) as GPU6-fan%, avg(rigGPU6t) as GPU6-temp</query>
           <earliest>-60m@m</earliest>
           <latest>now</latest>
         </search>
@@ -253,13 +259,14 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
+        <option name="refresh.display">progressbar</option>
       </chart>
     </panel>
     <panel>
       <chart>
         <title>GPU7</title>
         <search>
-          <query>host=rig1 source="*Claymore*" | timechart span=5m avg(rigGPU7m) as GPU7-mhs, avg(rigGPU7f) as GPU7-fan%, avg(rigGPU7t) as GPU7-temp</query>
+          <query>host=rig01 source="*Claymore*" | timechart span=5m avg(rigGPU7m) as GPU7-mhs, avg(rigGPU7f) as GPU7-fan%, avg(rigGPU7t) as GPU7-temp</query>
           <earliest>-60m@m</earliest>
           <latest>now</latest>
         </search>
@@ -286,6 +293,7 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
+        <option name="refresh.display">progressbar</option>
       </chart>
     </panel>
   </row>
