--- a/local/data/ui/views/bex36_weatherforecast.xml
+++ b/local/data/ui/views/bex36_weatherforecast.xml
@@ -4,11 +4,12 @@
     <panel>
       <chart>
         <search>
-          <query>sourcetype=_jsonFUTURE BOMPREDdate | timechart latest(BOMPREDrainChance) as RainChance latest(BOMPREDtempMax) as TempMax latest(BOMPREDtempMin) as TempMin</query>
-          <earliest>-240m@m</earliest>
+          <query>sourcetype=_jsonFUTURE BOMPREDdate | timechart latest(BOMPREDtempMin) as TempMin, latest(BOMPREDtempMax) as TempMax</query>
+          <earliest>@d</earliest>
           <latest>+6d</latest>
           <sampleRatio>1</sampleRatio>
         </search>
+        <option name="charting.seriesColors">[0xf2961f,0xd45641]</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">visible</option>
@@ -20,14 +21,60 @@
         <option name="charting.axisY.abbreviation">none</option>
         <option name="charting.axisY.scale">linear</option>
         <option name="charting.axisY2.abbreviation">none</option>
-        <option name="charting.axisY2.enabled">1</option>
+        <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">linear</option>
         <option name="charting.chart">column</option>
         <option name="charting.chart.bubbleMaximumSize">50</option>
         <option name="charting.chart.bubbleMinimumSize">10</option>
         <option name="charting.chart.bubbleSizeBy">area</option>
         <option name="charting.chart.nullValueMode">gaps</option>
-        <option name="charting.chart.overlayFields">TempMax,TempMin</option>
+        <option name="charting.chart.showDataLabels">none</option>
+        <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
+        <option name="charting.chart.stackMode">default</option>
+        <option name="charting.chart.style">shiny</option>
+        <option name="charting.drilldown">none</option>
+        <option name="charting.layout.splitSeries">0</option>
+        <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
+        <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
+        <option name="charting.legend.mode">standard</option>
+        <option name="charting.legend.placement">right</option>
+        <option name="charting.lineWidth">2</option>
+        <option name="refresh.display">progressbar</option>
+        <option name="trellis.enabled">0</option>
+        <option name="trellis.scales.shared">1</option>
+        <option name="trellis.size">medium</option>
+        <option name="trellis.splitBy">_aggregation</option>
+      </chart>
+    </panel>
+  </row>
+  <row>
+    <panel>
+      <chart>
+        <search>
+          <query>sourcetype=_jsonFUTURE BOMPREDdate | timechart latest(BOMPREDrainChance) as RainChance latest(BOMPREDrainMM) as RainMM</query>
+          <earliest>@d</earliest>
+          <latest>+6d</latest>
+          <sampleRatio>1</sampleRatio>
+        </search>
+        <option name="charting.seriesColors">[0x0d94b1, 0x23237a]</option>
+        <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
+        <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisTitleX.visibility">visible</option>
+        <option name="charting.axisTitleY.visibility">visible</option>
+        <option name="charting.axisTitleY2.visibility">visible</option>
+        <option name="charting.axisX.abbreviation">none</option>
+        <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.abbreviation">none</option>
+        <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.abbreviation">none</option>
+        <option name="charting.axisY2.enabled">1</option>
+        <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">column</option>
+        <option name="charting.chart.bubbleMaximumSize">50</option>
+        <option name="charting.chart.bubbleMinimumSize">10</option>
+        <option name="charting.chart.bubbleSizeBy">area</option>
+        <option name="charting.chart.nullValueMode">gaps</option>
+        <option name="charting.chart.overlayFields">RainMM</option>
         <option name="charting.chart.showDataLabels">none</option>
         <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
         <option name="charting.chart.stackMode">default</option>
@@ -42,7 +89,6 @@
         <option name="trellis.enabled">0</option>
         <option name="trellis.scales.shared">1</option>
         <option name="trellis.size">medium</option>
-        <option name="trellis.splitBy">_aggregation</option>
       </chart>
     </panel>
   </row>
@@ -57,7 +103,7 @@
  | sort _time 
  | table Day, Date, BOMPREDrainChance, BOMPREDrainMM, BOMPREDdescBrief, BOMPREDdescDetail,BOMPREDapiPollTime
  | rename BOMPREDrainChance as "Rain%", BOMPREDrainMM as "RainMM", BOMPREDdescBrief as "ForecastBrief", BOMPREDdescDetail as "ForecastDetail"</query>
-          <earliest>-240m@m</earliest>
+          <earliest>-d@d</earliest>
           <latest>+6d</latest>
           <sampleRatio>1</sampleRatio>
         </search>
