--- a/local/data/ui/views/crypto_markets.xml
+++ b/local/data/ui/views/crypto_markets.xml
@@ -178,20 +178,20 @@
       <chart>
         <title>BCH (bitcoin cash)</title>
         <search>
-          <query>index=main source=*Crypto* sourcetype=_json | timechart span=5m perc99(BCH-DATA.bestBid) as buyOffer, perc99(BCH-DATA.bestAsk) as sellAsk, perc99(BCH-DATA.lastPrice) as lastSale, perc99(BCH-DATA.volume24h) as volume24h</query>
+          <query>index=main source=*Crypto* sourcetype=_json | timechart span=5m perc99(BCHABC-DATA.bestBid) as buyOffer, perc99(BCHABC-DATA.bestAsk) as sellAsk, perc99(BCHABC-DATA.lastPrice) as lastSale, perc99(BCHABC-DATA.volume24h) as volume24h</query>
           <earliest>$formToken_TimePicker.earliest$</earliest>
           <latest>$formToken_TimePicker.latest$</latest>
         </search>
-        <option name="refresh.auto.interval">300</option>
-        <option name="charting.seriesColors">[0xbfe1ef,0xf4d89c,0xd45641,0x6a5d9c]</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">-90</option>
+        <option name="charting.axisLabelsY.majorUnit">3000</option>
         <option name="charting.axisTitleX.visibility">collapsed</option>
         <option name="charting.axisTitleY.text">Volume (coins)</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.text">Coin Price ($AUD)</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.maximumNumber">auto</option>
         <option name="charting.axisY.scale">linear</option>
         <option name="charting.axisY2.enabled">1</option>
         <option name="charting.axisY2.scale">linear</option>
@@ -200,6 +200,7 @@
         <option name="charting.chart.bubbleMinimumSize">10</option>
         <option name="charting.chart.bubbleSizeBy">area</option>
         <option name="charting.chart.nullValueMode">gaps</option>
+        <option name="charting.chart.overlayFields">buyOffer,sellAsk,lastSale</option>
         <option name="charting.chart.showDataLabels">none</option>
         <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
         <option name="charting.chart.stackMode">default</option>
@@ -209,9 +210,9 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
-        <option name="charting.axisLabelsY.majorUnit">3000</option>
-        <option name="charting.axisY.maximumNumber">auto</option>
-        <option name="charting.chart.overlayFields">buyOffer,sellAsk,lastSale</option>
+        <option name="charting.seriesColors">[0xbfe1ef,0xf4d89c,0xd45641,0x6a5d9c]</option>
+        <option name="refresh.auto.interval">300</option>
+        <option name="refresh.display">progressbar</option>
       </chart>
     </panel>
     <panel>
