--- a/local/data/ui/views/crypto_portfolio.xml
+++ b/local/data/ui/views/crypto_portfolio.xml
@@ -49,7 +49,7 @@
       <chart>
         <title>Portfolio (Main)</title>
         <search>
-          <query>sourcetype=_json kCryptoDictType="portfolio" | timechart last(KM-PORTFOLIO.AUDbtcmAUD) as AUDbtcmAUD, last(KM-PORTFOLIO.BCHbtcmAUD) as BCHbtcmAUD, last(KM-PORTFOLIO.BTCbtcmAUD) as BTCbtcmAUD, last(KM-PORTFOLIO.ETCbtcmAUD) as ETCbtcmAUD, last(KM-PORTFOLIO.ETHbtcmAUD) as ETHbtcmAUD, last(KM-PORTFOLIO.LTCbtcmAUD) as LTCbtcmAUD, last(KM-PORTFOLIO.XRPbtcmAUD) as XRPbtcmAUD, last(KM-PORTFOLIO-SUM.totalBINmain) as totalBINmain,   last(KM-PORTFOLIO-SUM.totalBINalt) as totalBINalt, last(KM-PORTFOLIO-SUM.totalALL) as totalALL,</query>
+          <query>sourcetype=_json kCryptoDictType="portfolio" | timechart last(KM-PORTFOLIO.AUDbtcmAUD) as AUDbtcmAUD, last(KM-PORTFOLIO.BCHABCbtcmAUD) as BCHABCbtcmAUD, last(KM-PORTFOLIO.BTCbtcmAUD) as BTCbtcmAUD, last(KM-PORTFOLIO.ETCbtcmAUD) as ETCbtcmAUD, last(KM-PORTFOLIO.ETHbtcmAUD) as ETHbtcmAUD, last(KM-PORTFOLIO.LTCbtcmAUD) as LTCbtcmAUD, last(KM-PORTFOLIO.XRPbtcmAUD) as XRPbtcmAUD, last(KM-PORTFOLIO-SUM.totalBINmain) as totalBINmain,   last(KM-PORTFOLIO-SUM.totalBINalt) as totalBINalt, last(KM-PORTFOLIO-SUM.totalALL) as totalALL,</query>
           <earliest>$formToken_TimePicker.earliest$</earliest>
           <latest>$formToken_TimePicker.latest$</latest>
         </search>
@@ -76,6 +76,7 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
+        <option name="refresh.display">progressbar</option>
       </chart>
     </panel>
   </row>
@@ -84,11 +85,10 @@
       <chart>
         <title>Portfolio (All)</title>
         <search>
-          <query>sourcetype=_json kCryptoDictType="portfolio" | timechart last(KM-PORTFOLIO.AUDbtcmAUD) as AUDbtcmAUD, last(KM-PORTFOLIO.BCHbtcmAUD) as BCHbtcmAUD, last(KM-PORTFOLIO.BTCbtcmAUD) as BTCbtcmAUD, last(KM-PORTFOLIO.ETCbtcmAUD) as ETCbtcmAUD, last(KM-PORTFOLIO.ETHbtcmAUD) as ETHbtcmAUD, last(KM-PORTFOLIO.LTCbtcmAUD) as LTCbtcmAUD, last(KM-PORTFOLIO.XRPbtcmAUD) as XRPbtcmAUD, last(KM-PORTFOLIO.BCHbinAUD) as BCHbinAUD, last(KM-PORTFOLIO.BTCbinAUD) as BTCbinAUD, last(KM-PORTFOLIO.ETCbinAUD) as ETCbinAUD,  last(KM-PORTFOLIO.ETHbinAUD) as ETHbinAUD, last(KM-PORTFOLIO.LTCbinAUD) as LTCbinAUD, last(KM-PORTFOLIO.XRPbinAUD) as XRPbinAUD,  last(KM-PORTFOLIO-SUM.totalBINalt) as totalBINalt, last(KM-PORTFOLIO-SUM.totalCashIn) as totalCashIn, last(KM-PORTFOLIO-SUM.totalProfit) as totalProfit, last(KM-PORTFOLIO-SUM.totalALL) as totalALL,</query>
+          <query>sourcetype=_json kCryptoDictType="portfolio" | timechart last(KM-PORTFOLIO.AUDbtcmAUD) as AUDbtcmAUD, last(KM-PORTFOLIO.BCHABCbtcmAUD) as BCHABCbtcmAUD, last(KM-PORTFOLIO.BTCbtcmAUD) as BTCbtcmAUD, last(KM-PORTFOLIO.ETCbtcmAUD) as ETCbtcmAUD, last(KM-PORTFOLIO.ETHbtcmAUD) as ETHbtcmAUD, last(KM-PORTFOLIO.LTCbtcmAUD) as LTCbtcmAUD, last(KM-PORTFOLIO.XRPbtcmAUD) as XRPbtcmAUD, last(KM-PORTFOLIO.BCHABCbinAUD) as BCHABCbinAUD, last(KM-PORTFOLIO.BTCbinAUD) as BTCbinAUD, last(KM-PORTFOLIO.ETCbinAUD) as ETCbinAUD,  last(KM-PORTFOLIO.ETHbinAUD) as ETHbinAUD, last(KM-PORTFOLIO.LTCbinAUD) as LTCbinAUD, last(KM-PORTFOLIO.XRPbinAUD) as XRPbinAUD,  last(KM-PORTFOLIO-SUM.totalBINalt) as totalBINalt, last(KM-PORTFOLIO-SUM.totalCashIn) as totalCashIn, last(KM-PORTFOLIO-SUM.totalProfit) as totalProfit, last(KM-PORTFOLIO-SUM.totalALL) as totalALL,</query>
           <earliest>$formToken_TimePicker.earliest$</earliest>
           <latest>$formToken_TimePicker.latest$</latest>
         </search>
-        <option name="refresh.auto.interval">300</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">-90</option>
         <option name="charting.axisTitleX.visibility">collapsed</option>
@@ -113,6 +113,8 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
+        <option name="refresh.auto.interval">300</option>
+        <option name="refresh.display">progressbar</option>
       </chart>
     </panel>
   </row>
