--- a/local/data/ui/views/bex36_pfsense.xml
+++ b/local/data/ui/views/bex36_pfsense.xml
@@ -155,8 +155,8 @@
         <search>
           <query>sourcetype=_json source="/Applications/Splunk/etc/apps/_kapp/bin/_KNETWORK/getPFSENSEstats.py"
 | streamstats current=t global=f window=2 earliest(searchesAgainstState) as lastState latest(searchesAgainstState) as currentState 
-| eval stateLookupsPerSecond=(currentState - lastState)/60 
-| timechart span=1m last(stateLookupsPerSecond)</query>
+| eval stateLookupPerSec=(currentState - lastState)/60 
+| timechart span=1m last(stateLookupPerSec) as stateLookupPerSec</query>
           <earliest>$kTimePicker.earliest$</earliest>
           <latest>$kTimePicker.latest$</latest>
           <sampleRatio>1</sampleRatio>
@@ -208,6 +208,57 @@
 | eval mbpsIn  =(currentBytesIn  - lastBytesIn )*8/1024/1024/60 
 | eval mbpsOut =(currentBytesOut - lastBytesOut)*8/1024/1024/60 
 | timechart span=1m last(mbpsIn), last(mbpsOut)</query>
+          <earliest>$kTimePicker.earliest$</earliest>
+          <latest>$kTimePicker.latest$</latest>
+          <sampleRatio>1</sampleRatio>
+        </search>
+        <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
+        <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisTitleX.visibility">visible</option>
+        <option name="charting.axisTitleY.visibility">visible</option>
+        <option name="charting.axisTitleY2.visibility">visible</option>
+        <option name="charting.axisX.abbreviation">none</option>
+        <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.abbreviation">none</option>
+        <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.abbreviation">none</option>
+        <option name="charting.axisY2.enabled">0</option>
+        <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">line</option>
+        <option name="charting.chart.bubbleMaximumSize">50</option>
+        <option name="charting.chart.bubbleMinimumSize">10</option>
+        <option name="charting.chart.bubbleSizeBy">area</option>
+        <option name="charting.chart.nullValueMode">gaps</option>
+        <option name="charting.chart.showDataLabels">none</option>
+        <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
+        <option name="charting.chart.stackMode">default</option>
+        <option name="charting.chart.style">shiny</option>
+        <option name="charting.drilldown">none</option>
+        <option name="charting.layout.splitSeries">0</option>
+        <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
+        <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
+        <option name="charting.legend.mode">standard</option>
+        <option name="charting.legend.placement">right</option>
+        <option name="charting.lineWidth">2</option>
+        <option name="refresh.display">progressbar</option>
+        <option name="trellis.enabled">0</option>
+        <option name="trellis.scales.shared">1</option>
+        <option name="trellis.size">medium</option>
+      </chart>
+    </panel>
+  </row>
+  <row>
+    <panel>
+      <title>PPS - WAN</title>
+      <chart>
+        <search>
+          <query>sourcetype=_json source="/Applications/Splunk/etc/apps/_kapp/bin/_KNETWORK/getPFSENSEstats.py"
+| streamstats current=t global=f window=2 
+    earliest(vtnet0ppsIn)  as lastPpsIn  latest(vtnet0ppsIn)  as currentPpsIn
+    earliest(vtnet0ppsOut) as lastPpsOut latest(vtnet0ppsOut) as currentPpsOut
+| eval ppsIn  =(currentPpsIn  - lastPpsIn )/60 
+| eval ppsOut =(currentPpsOut - lastPpsOut)/60 
+| timechart span=1m last(ppsIn), last(ppsOut)</query>
           <earliest>$kTimePicker.earliest$</earliest>
           <latest>$kTimePicker.latest$</latest>
           <sampleRatio>1</sampleRatio>
