--- a/local/data/ui/views/bex36_pfsense.xml
+++ b/local/data/ui/views/bex36_pfsense.xml
@@ -1,5 +1,5 @@
 <form>
-  <label>[Bex36:: pfSense]</label>
+  <label>[Bex36:: Internet - pfSense]</label>
   <fieldset submitButton="false">
     <input type="time" token="kTimePicker">
       <label></label>
